syntax = "proto3";
option java_multiple_files = true;
package org.example.hello.world.grpc;

message HelloRequest {
    string firstName = 1;
    string lastName = 2;
}

message HelloResponse {
    string greeting = 1;
}

service HelloService {
    rpc sayHello(HelloRequest) returns (HelloResponse);
    rpc sayHelloAgain (HelloRequest) returns (HelloResponse) {}
}
